@@ -86,7 +86,7 @@ use constant SASL_PASSWD_FILE         => '/etc/postfix/sasl_passwd';
 use constant MAILNAME_FILE            => '/etc/mailname';
 use constant VDOMAINS_MAILBOXES_DIR   => '/var/vmail';
 use constant ARCHIVEMAIL_CRON_FILE    => '/etc/cron.daily/archivemail';
-use constant FETCHMAIL_SERVICE        => 'fetchmail';
+use constant FETCHMAIL_SERVICE        => 'zentyal.fetchmail';
 use constant ALWAYS_BCC_TABLE_FILE    => '/etc/postfix/alwaysbcc';
 use constant SIEVE_SCRIPTS_DIR        => '/var/vmail/sieve';
 use constant BOUNCE_ADDRESS_KEY       => 'SMTPOptions/bounceReturnAddress';
